--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>Nombre pestaña</title>
+        <link rel="stylesheet" href="Estilos/style.css">
     </head>
     <body>
         <h1>Primer proyecto git</h1>
+        <p id="p_estilo">etiqueta con estilo</p>
     </body>
 </html>
